--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ header h3{
     position: absolute;
     top: 90%;
     background-color: white;
+    box-shadow: 0px 3px 5px 5px rgb(223, 223, 223);
 }
 .search-suggestions ul{
     list-style-type: none;
@@ -141,7 +142,6 @@ header h3{
     color: var(--fc-p);
 }
 .result-section{
-    z-index: 11;
     display: none;
     background-color: var(--white);
     border-radius: 1rem;
