--- a/style.css
+++ b/style.css
@@ -79,18 +79,21 @@ header h3{
     top: 90%;
     background-color: white;
     box-shadow: 0px 3px 5px 5px rgb(223, 223, 223);
+    padding: .5rem;
+    border-radius: 1rem;
+    opacity: 0;
+    z-index: 11;
 }
 .search-suggestions ul{
-    list-style-type: none;
     display: grid;
 }
 .search-suggestions ul li{
+    list-style-type: none;
     padding: .5rem;
     border-bottom: 1px solid rgb(207, 207, 207);
 }
 .search-suggestions ul li:hover{
-    background-color: var(--fc-p);
-    color: var(--white);
+    background-color: var(--sub-bg);
 }
 .search-wrapper #search:focus-within{
     outline: 1px solid var(--accent);
@@ -104,12 +107,12 @@ header h3{
     aspect-ratio: 1;
     border-radius: 50%;
     background-color: var(--white);
-    transition: .3s ease-in-out;
+    transition: .1s ease-in-out;
 }
 .search-btn-wrapper svg{
     fill: var(--fc2);
 }
-.search-btn-wrapper:hover{
+.search-btn-wrapper:active{
     transform: scale(1.1);
     background-color: var(--accent);
     svg{
